# Sonia

./: .gitignore  Cargo.toml  Domino-Effect.json  README.md  last_save.json  that_would_be_great.json
memes_urls/: last_save.json  memes_urls.txt  saved_links.json
src/: command.rs  commands.rs  fetcher.rs  handler.rs  main.rs  scrapper.py  services.rs  urls_manager.rs
src/assets/personalities/: sonia_default.json
src/commands/: call_commands.rs  command.rs  meme_command.rs  meme_commands.rs  mod.rs  ping_command.rs  role_play_commands.rs
src/commands/call_commands/: join_command.rs  leave_command.rs  talk_command.rs  test.rs
src/commands/meme_commands/: fetcher.rs  meme_command.rs  urls_manager.rs
src/commands/ping_commands/: mod.rs  ping_command.rs
src/commands/role_play_commands/: player.rs  role_play_command.rs
src/handlers/: handler.rs  mod.rs  voice_handler.rs
src/services/: huggin_face.rs  local.rs
voice_handler/: voice_manager.py
