[package]
name = "sonia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vosk = "0.3.1"
dotenv = "0.15.0"
maplit = "1.0.2"
rand = "0.8.5"
reqwest = "0.12.12"
scraper = "0.22.0"
serde = "1.0.217"
songbird = "0.4.6"
serde_json = "1.0.135"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.85"
